Animation icon in the outliner persists even if the object no longer has any actions linked to it #35124

Closed
opened 2013-04-28 06:37:20 +02:00 by Jason Clarke · 3 comments

%%%--- Operating System, Graphics card ---
Mac OS X 10.8

- Blender version with error, and version that worked ---

2.67rc1

- Short description of error ---

When you add an animation of some kind to an object, an action gets associated to it, and this is displayed in the outliner. All well and good. But, if you later delete all actions from that object, so it no longer has any animations attatch to it at all, the outliner icon will persist. It can't be expanded, since there's nothing under it. It appears to just stick around for no reason at all, making it seem like you didn't REALLY unlink the action from the object. It won't go away even if you remove ALL action datablocks from the project file and re-open it. It seems to be the only outliner tag that persists like this.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Assign some animation to an object, a transform keyframe will do fine.
  2. Unlink all actions and drivers from the object. Note that the animation section in the outliner is still there, but no longer has anything in it.%%%
%%%--- Operating System, Graphics card --- Mac OS X 10.8 - Blender version with error, and version that worked --- 2.67rc1 - Short description of error --- When you add an animation of some kind to an object, an action gets associated to it, and this is displayed in the outliner. All well and good. But, if you later delete all actions from that object, so it no longer has any animations attatch to it at all, the outliner icon will persist. It can't be expanded, since there's nothing under it. It appears to just stick around for no reason at all, making it seem like you didn't REALLY unlink the action from the object. It won't go away even if you remove ALL action datablocks from the project file and re-open it. It seems to be the only outliner tag that persists like this. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Assign some animation to an object, a transform keyframe will do fine. 2. Unlink all actions and drivers from the object. Note that the animation section in the outliner is still there, but no longer has anything in it.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Lazy coding here, and even though it's code-wise logically correct, it doesn't make sense for a UI :)
Added fix in svn. Thanks for the report!
%%%

%%%Lazy coding here, and even though it's code-wise logically correct, it doesn't make sense for a UI :) Added fix in svn. Thanks for the report! %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35124
No description provided.