Bug fix #35124

Outliner was drawing "Animation" category even when no actions/strips/drivers existed.
Would happen after adding Action and unlinking it.